Fixed hero title styling on mobile

--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -211,6 +211,6 @@
 }
 
 .hero--title-mobile-wrap {
-  display: flex;
+  display: flex !important;
   justify-content: space-between;
 }
